fix(dropdown): Manage visibility of dropdown-menu via CSS
- `document.hidden` is used on dropdown focus and blur handlers to handle changes on screen visibility correctly
- Instead of toggling the whole dropdown menu from DOM, we now use CSS to handle its visibility
- Effect that listens `selectOption` to focus on it is removed and now we only use `focusedOption` to handle scroll computations
- Direct DOM access to the focused list item element is removed to use React Ref API.

--- a/src/dropdown/list/_dropdown-list.scss
+++ b/src/dropdown/list/_dropdown-list.scss
@@ -11,6 +11,13 @@
   background-color: white;
   border: 1px solid var(--default-border-color);
   border-radius: var(--small-radius-size);
+  visibility: hidden;
+  opacity: 0;
+}
+
+.dropdown-list__is-visible {
+  visibility: visible;
+  opacity: 1;
 }
 
 .dropdown-empty-message {
